Update implement for pushing v2.0.0-RC1 (Not commit to package push)
[API] Completely overhaul how Plugin being called and completely use annotation
[Core] Auth for Admin to control Pudel Behavior
[Core] Support annotation plugin